# MK32

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  partitions.csv  run.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old
Keyboard setups/Let's split'ish/: keyboard_config.h
components/battery/: CMakeLists.txt  battery_monitor.c
components/battery/include/: battery_monitor.h
components/battery_monitor/: battery_monitor.c  battery_monitor.h  component.mk
components/ble/: CMakeLists.txt  hal_ble.c
components/ble/include/: common.h  hal_ble.h  hidd_le_prf_int.h  keylayouts.h
components/ble_new/: common.h  hal_ble.c  hal_ble.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hidd_le_prf_int.h  keyboard.c  keyboard.h  undefkeylayouts.h
components/espnow/: component.mk  espnow_recieve.c  espnow_recieve.h  espnow_send.c  espnow_send.h
components/espnowmk32/: CMakeLists.txt  espnow_receive.c  espnow_send.c  espnow_send.cpp
components/espnowmk32/include/: espnow_receive.h
components/hidkeycodeconv/: CMakeLists.txt  keycode_conv.c
components/led_strip/: component.mk
components/led_strip/inc/led_strip/: led_strip.h
components/nkolban_BLE/: BLEAdvertising.cpp  BLEAdvertising.h  BLEDevice.cpp  BLEHIDDevice.cpp  BLEHIDDevice.h  BLERemoteService.cpp  BLEServer.cpp  BLEUtils.cpp  HIDTypes.h  HID_kbdmousejoystick.cpp  HID_kbdmousejoystick.h  component.mk
components/nvs_funcs/: arr_conv.c  arr_conv.h  config_structs.h  nvs_funcs.c  nvs_funcs.h  nvs_keymaps.h
components/nvsfuncs/: CMakeLists.txt  arr_conv.c  nvs_funcs.c
components/oled/: CMakeLists.txt  u8g2_buffer.c  u8g2_circle.c  u8g2_cleardisplay.c  u8g2_d_setup.c  u8g2_esp32_hal.c  u8g2_hvline.c  u8g2_input_value.c  u8g2_intersection.c  u8g2_ll_hvline.c  u8g2_message.c  u8g2_polygon.c  u8g2_setup.c  u8log.c  u8log_u8x8.c  u8x8_d_a2printer.c  u8x8_d_il3820_296x128.c  u8x8_d_ks0108.c  u8x8_d_ls013b7dh03.c  u8x8_d_pcd8544_84x48.c  u8x8_d_pcf8814_hx1230.c  u8x8_d_sbn1661.c  u8x8_d_sh1106_72x40.c  u8x8_d_sh1107.c  u8x8_d_sh1122.c  u8x8_d_ssd1305.c  u8x8_d_ssd1306_128x32.c  u8x8_d_ssd1306_64x48.c  u8x8_d_ssd1306_96x16.c  u8x8_d_ssd1317.c  u8x8_d_ssd1322.c  u8x8_d_ssd1325.c  u8x8_d_ssd1329.c  u8x8_d_ssd1607_200x200.c  u8x8_d_st75256.c  u8x8_d_st7565.c  u8x8_d_st7586s_erc240160.c  u8x8_d_st7586s_s028hn118a.c  u8x8_d_st7588.c  u8x8_d_st7920.c  (+13 more)
components/oled/include/: oled_tasks.h  u8g2_esp32_hal.h
components/plugins/: CMakeLists.txt  layout_server.c  plugins.c
components/plugins/include/: layout_server.h  plugin_manager.h  plugins.h  testFunc.h
components/r_encoder/: r_encoder.c  r_encoder.h
components/rotencoder/: CMakeLists.txt  r_encoder.c
components/u8g2_OLED/: component.mk  oled_tasks.c  oled_tasks.h  u8g2.h  u8g2_bitmap.c  u8g2_box.c  u8g2_buffer.c  u8g2_d_memory.c  u8g2_esp32_hal.c  u8g2_esp32_hal.h  u8g2_font.c  u8g2_kerning.c  u8g2_line.c  u8g2_ll_hvline.c  u8g2_selection_list.c  u8log_u8g2.c  u8x8_8x8.c  u8x8_byte.c  u8x8_cad.c  u8x8_d_ist3020.c  u8x8_d_lc7981.c  u8x8_d_ld7032_60x32.c  u8x8_d_max7219.c  u8x8_d_pcf8812.c  u8x8_d_sed1330.c  u8x8_d_sh1106_64x32.c  u8x8_d_sh1108.c  u8x8_d_ssd1306_128x64_noname.c  u8x8_d_ssd1306_48x64.c  u8x8_d_ssd1306_64x32.c  u8x8_d_ssd1309.c  u8x8_d_ssd1326.c  u8x8_d_ssd1327.c  u8x8_d_ssd1606_172x72.c  u8x8_d_st7567.c  u8x8_d_t6963.c  u8x8_d_uc1601.c  u8x8_d_uc1610.c  u8x8_d_uc1611.c  u8x8_d_uc1701_dogs102.c  (+4 more)
components/wifiman/: CMakeLists.txt  wifi_manager.c
components/wifiman/include/: wifi_manager.h
keyboards/catiONE/: keyboard_config.h  keymap.c  matrix.c
keyboards/default/: keyboard_config.h  matrix.c
keyboards/letSplitIsh/: keyboard_config.h  keymap.c
keyboards/x32k/: keyboard_config.h  keymap.h  matrix.h
main/: CMakeLists.txt  component.mk  espnow_recieve.c  espnow_recieve.h  espnow_send.c  espnow_send.h  key_definitions.h  keyboard_config.h  keymap.c  keymap.h  keypress_handles.c  led_strip.c  matrix.c  matrix.h  mk32_main.cpp  testMK32.cpp
plugins/: component.mk  layout_server.c  layout_server.h  plugin_manager.c  plugin_manager.h  plugins.c  plugins.h  testFunc.c
plugins/plugin_components/hid_keycode_conv/: keycode_conv.c  keycode_conv.h
plugins/plugin_components/wifi_manager/: wifi_manager.c  wifi_manager.h
