idf_component_register(SRCS "oled_tasks.c"
                            "u8g2_bitmap.c"
                            "u8g2_box.c"
                            "u8g2_buffer.c"
                            "u8g2_circle.c"
                            "u8g2_cleardisplay.c"
                            "u8g2_d_memory.c"
                            "u8g2_d_setup.c"
                            "u8g2_esp32_hal.c"
                            "u8g2_font.c"
                            "u8g2_fonts.c"
                            "u8g2_hvline.c"
                            "u8g2_input_value.c"
                            "u8g2_intersection.c"
                            "u8g2_kerning.c"
                            "u8g2_line.c"
                            "u8g2_ll_hvline.c"
                            "u8g2_message.c"
                            "u8g2_polygon.c"
                            "u8g2_selection_list.c"
                            "u8g2_setup.c"
                            "u8log.c"
                            "u8log_u8g2.c"
                            "u8log_u8x8.c"
                            "u8x8_8x8.c"
                            "u8x8_byte.c"
                            "u8x8_cad.c"
                            "u8x8_d_a2printer.c"
                            "u8x8_d_il3820_296x128.c"
                            "u8x8_d_ist3020.c"
                            "u8x8_d_ks0108.c"
                            "u8x8_d_lc7981.c"
                            "u8x8_d_ld7032_60x32.c"
                            "u8x8_d_ls013b7dh03.c"
                            "u8x8_d_max7219.c"
                            "u8x8_d_pcd8544_84x48.c"
                            "u8x8_d_pcf8812.c"
                            "u8x8_d_pcf8814_hx1230.c"
                            "u8x8_d_sbn1661.c"
                            "u8x8_d_sed1330.c"
                            "u8x8_d_sh1106_64x32.c"
                            "u8x8_d_sh1106_72x40.c"
                            "u8x8_d_sh1107.c"
                            "u8x8_d_sh1108.c"
                            "u8x8_d_sh1122.c"
                            "u8x8_d_ssd1305.c"
                            "u8x8_d_ssd1306_48x64.c"
                            "u8x8_d_ssd1306_64x32.c"
                            "u8x8_d_ssd1306_64x48.c"
                            "u8x8_d_ssd1306_96x16.c"
                            "u8x8_d_ssd1306_128x32.c"
                            "u8x8_d_ssd1306_128x64_noname.c"
                            "u8x8_d_ssd1309.c"
                            "u8x8_d_ssd1317.c"
                            "u8x8_d_ssd1322.c"
                            "u8x8_d_ssd1325.c"
                            "u8x8_d_ssd1326.c"
                            "u8x8_d_ssd1327.c"
                            "u8x8_d_ssd1329.c"
                            "u8x8_d_ssd1606_172x72.c"
                            "u8x8_d_ssd1607_200x200.c"
                            "u8x8_d_st7565.c"
                            "u8x8_d_st7567.c"
                            "u8x8_d_st7586s_erc240160.c"
                            "u8x8_d_st7586s_s028hn118a.c"
                            "u8x8_d_st7588.c"
                            "u8x8_d_st7920.c"
                            "u8x8_d_st75256.c"
                            "u8x8_d_stdio.c"
                            "u8x8_d_t6963.c"
                            "u8x8_d_uc1601.c"
                            "u8x8_d_uc1604.c"
                            "u8x8_d_uc1608.c"
                            "u8x8_d_uc1610.c"
                            "u8x8_d_uc1611.c"
                            "u8x8_d_uc1617.c"
                            "u8x8_d_uc1638.c"
                            "u8x8_d_uc1701_dogs102.c"
                            "u8x8_d_uc1701_mini12864.c"
                            "u8x8_debounce.c"
                            "u8x8_display.c"
                            "u8x8_fonts.c"
                            "u8x8_gpio.c"
                            "u8x8_input_value.c"
                            "u8x8_message.c"
                            "u8x8_selection_list.c"
                            "u8x8_setup.c"
                            "u8x8_string.c"
                            "u8x8_u8toa.c"
                            "u8x8_u16toa.c"
                    INCLUDE_DIRS "include" "${CMAKE_SOURCE_DIR}/main"
                    REQUIRES "battery" "nvsfuncs")
